# mpi_course_homework

./: .gitignore  README.md  comparison.opam  dune-project
js/: index.js  package.json  webpack.config.js
life/: Makefile
life/graphics/: job.sh  measure.py
life/lib/: common.c  decart.c  life_lib.c  life_lib.h  row_decomp.c  scat.c
protos/: life_field.proto
